Remote repository test

--- a/BoardDealerWebApp/Views/Home/Index.cshtml
+++ b/BoardDealerWebApp/Views/Home/Index.cshtml
@@ -3,6 +3,6 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 class="display-4">Board Dealer App</h1>
+    <p>Wybieraj gry planszowe z naszej bogatej oferty i zarezerwuj je w aplikacji a my zajmiemy się resztą!</p>
 </div>
