--- a/BoardDealerWebApp/Views/Home/Index.cshtml
+++ b/BoardDealerWebApp/Views/Home/Index.cshtml
@@ -3,6 +3,6 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Board Dealer App</h1>
+    <h1 class="display-4">Board Dealer</h1>
     <p>Wybieraj gry planszowe z naszej bogatej oferty i zarezerwuj je w aplikacji a my zajmiemy się resztą!</p>
 </div>
